home page revamp

--- a/alien-information-theory.html
+++ b/alien-information-theory.html
@@ -145,7 +145,7 @@
             left: 0;
             width: 0;
             height: 2px;
-            background: greenyellow;
+            background: #00ff9d;
             transition: width 0.3s ease;
         }
 
@@ -194,7 +194,7 @@
         }
 
         .social-links a:hover {
-            color: greenyellow;
+            color: #00ff9d;
         }
 
         /* Mobile Styles */
@@ -228,7 +228,7 @@
             }
 
             .nav-links a:hover {
-                color: greenyellow;
+                color: #00ff9d;
             }
 
             .mobile-menu-btn {
