--- a/journal.html
+++ b/journal.html
@@ -201,7 +201,7 @@
             left: 0;
             width: 0;
             height: 2px;
-            background: greenyellow;
+            background: #00ff9d;
             transition: width 0.3s ease;
         }
 
@@ -484,7 +484,7 @@
             }
 
             .nav-links a:hover {
-                color: greenyellow;
+                color: #00ff9d;
             }
 
             .mobile-menu-btn {
@@ -594,7 +594,7 @@
         }
 
         .social-links a:hover {
-            color: greenyellow;
+            color: #00ff9d;
         }
 
         /* Styles for resume and certification modals */
@@ -1126,7 +1126,7 @@ const newStyles = `
                 </a>
 
                 <a href="neuroscience-of-psychedelics.html" class="card">
-                    <img src="images/Abstract_Human_Figure-removebg-preview (2).png" alt="Space Exploration" class="blog-img">
+                    <img src="images/Hand Holding Camera.jpeg" alt="Space Exploration" class="blog-img">
                     <div class="card-content">
                         <h3>How Psychedelics Dissolve Reality and Rewire the Mind </h3>
                         
@@ -1407,7 +1407,7 @@ const newStyles = `
             
                 <!-- Article 4 -->
                 <a href="ai-global-stability.html" class="card">
-                    <img src="images/Futuristic_Portrait-removebg-preview.png" alt="AI and Global Stability" class="blog-img">
+                    <img src="images/Monochrome_Male_Models_in_Suits-removebg-preview.png" alt="AI and Global Stability" class="blog-img">
                     <div class="card-content">
                         <h3>AI and the Future of Global Stability</h3>
                         <div class="blog-meta">
