--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
             left: 0;
             width: 0;
             height: 2px;
-            background: greenyellow;
+            background: #00ff9d;
             transition: width 0.3s ease;
         }
 
@@ -195,17 +195,17 @@
         }
 
         .btn-primary {
-            background: greenyellow;
+            background: #00ff9d;
             color: black;
         }
 
         .btn-primary:hover {
-            background: greenyellow;
+            background: #00ff9d;
             transform: translateY(-2px);
         }
 
         .btn-outline {
-            border: 2px solid greenyellow;
+            border: 2px solid #00ff9d;
             color: black;
         }
 
@@ -389,7 +389,7 @@
     }
 
     .nav-links a:hover {
-        color: greenyellow;
+        color: #00ff9d;
     }
 
     .mobile-menu-btn {
@@ -514,7 +514,7 @@
         }
 
         .social-links a:hover {
-            color: greenyellow;
+            color: #00ff9d;
         }
 
         /* Styles for resume and certification modals */
