--- a/ai-global-stability.html
+++ b/ai-global-stability.html
@@ -154,7 +154,7 @@
             left: 0;
             width: 0;
             height: 2px;
-            background: greenyellow;
+            background: #00ff9d;
             transition: width 0.3s ease;
         }
 
@@ -203,7 +203,7 @@
         }
 
         .social-links a:hover {
-            color: greenyellow;
+            color: #00ff9d;
         }
 
         /* Mobile Styles */
@@ -245,7 +245,7 @@
             }
 
             .nav-links a:hover {
-                color: greenyellow;
+                color: #00ff9d;
             }
 
             .mobile-menu-btn {
@@ -481,7 +481,7 @@
     <section class="section">
         <div class="article-container">
             <div class="article-image">
-                <img src="images/Futuristic_Portrait-removebg-preview.png" alt="AI Brain" class="featured-image">
+                <img src="images/Monochrome_Male_Models_in_Suits-removebg-preview.png" alt="AI Brain" class="featured-image">
             </div>
             <div class="article-header">
                 <h1>AI and the Future of Global Stability</h1>
