--- a/batsheva-dueck.html
+++ b/batsheva-dueck.html
@@ -156,7 +156,7 @@
             left: 0;
             width: 0;
             height: 2px;
-            background: greenyellow;
+            background: #00ff9d;
             transition: width 0.3s ease;
         }
 
@@ -205,7 +205,7 @@
         }
 
         .social-links a:hover {
-            color: greenyellow;
+            color: #00ff9d;
         }
 
         /* Mobile Styles */
@@ -247,7 +247,7 @@
             }
 
             .nav-links a:hover {
-                color: greenyellow;
+                color: #00ff9d;
             }
 
             .mobile-menu-btn {
@@ -461,7 +461,7 @@
     font-weight: 700;
     margin-top: 2rem;
     margin-bottom: 1rem;
-    color: greenyellow;
+    color: #00ff9d;
 }
 
 .interview-answer {
