--- a/levels-of-lucidity.html
+++ b/levels-of-lucidity.html
@@ -147,7 +147,7 @@
             left: 0;
             width: 0;
             height: 2px;
-            background: greenyellow;
+            background: #00ff9d;
             transition: width 0.3s ease;
         }
 
@@ -196,7 +196,7 @@
         }
 
         .social-links a:hover {
-            color: greenyellow;
+            color: #00ff9d;
         }
 
         /* Mobile Styles */
@@ -230,7 +230,7 @@
             }
 
             .nav-links a:hover {
-                color: greenyellow;
+                color: #00ff9d;
             }
 
             .mobile-menu-btn {
