--- a/magazine.html
+++ b/magazine.html
@@ -201,7 +201,7 @@
             left: 0;
             width: 0;
             height: 2px;
-            background: greenyellow;
+            background: #00ff9d;
             transition: width 0.3s ease;
         }
 
@@ -484,7 +484,7 @@
             }
 
             .nav-links a:hover {
-                color: greenyellow;
+                color: #00ff9d;
             }
 
             .mobile-menu-btn {
@@ -594,7 +594,7 @@
         }
 
         .social-links a:hover {
-            color: greenyellow;
+            color: #00ff9d;
         }
 
         /* Styles for resume and certification modals */
