--- a/worldwideboyz.html
+++ b/worldwideboyz.html
@@ -156,7 +156,7 @@
             left: 0;
             width: 0;
             height: 2px;
-            background: greenyellow;
+            background: #00ff9d;
             transition: width 0.3s ease;
         }
 
@@ -205,7 +205,7 @@
         }
 
         .social-links a:hover {
-            color: greenyellow;
+            color: #00ff9d;
         }
 
         /* Mobile Styles */
@@ -247,7 +247,7 @@
             }
 
             .nav-links a:hover {
-                color: greenyellow;
+                color: #00ff9d;
             }
 
             .mobile-menu-btn {
@@ -461,7 +461,7 @@
     font-weight: 700;
     margin-top: 2rem;
     margin-bottom: 1rem;
-    color: greenyellow;
+    color: #00ff9d;
 }
 
 .interview-answer {
@@ -479,8 +479,8 @@
     margin-top: 1rem;
     padding: 0.5rem 1.5rem;
     background-color: black;
-    color: greenyellow;
-    border: 1px solid greenyellow;
+    color: #00ff9d;
+    border: 1px solid #00ff9d;
     border-radius: 3px;
     font-family: 'IBM Plex Mono', monospace;
     font-size: 0.9rem;
@@ -489,7 +489,7 @@
 }
 
 .language-button:hover {
-    background-color: greenyellow;
+    background-color: #00ff9d;
     color: black;
     transform: translateY(-2px);
 }
