--- a/magazine.html
+++ b/magazine.html
@@ -1013,7 +1013,7 @@ const newStyles = `
 
 .blog-meta i {
     font-size: 0.8rem;
-    color: greenyellow;
+    color: #00ff9d;
 }
 
 @media (max-width: 768px) {
@@ -1054,7 +1054,77 @@ const newStyles = `
     }
 }
 
+.card {
+    background-color: #000;
+    border: 1px solid #00ff9d;
+    border-radius: 0;
+    padding: 0;
+    overflow: hidden;
+    position: relative;
+    transition: all 0.3s ease;
+    box-shadow: 0 0 10px rgba(0, 255, 65, 0.3);
+}
 
+.card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 0 20px rgba(0, 255, 65, 0.5);
+}
+
+.card::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 30px;
+    background: linear-gradient(to right, #003b00, #00ff9d);
+    opacity: 0.3;
+}
+
+.card h3 {
+    color: white;
+    font-family: 'IBM Plex Mono', monospace;
+    font-size: 1.2rem;
+    padding: 1rem;
+    margin: 0;
+    border-bottom: 1px solid #00ff9d;
+    background-color: rgba(0, 20, 0, 0.5);
+}
+
+.blog-img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    filter: grayscale(80%) contrast(120%) brightness(70%);
+    border-bottom: 1px solid #00ff9d;
+}
+
+.blog-meta {
+    font-family: 'IBM Plex Mono', monospace;
+    color: white;
+    padding: 0.5rem 1rem;
+    font-size: 0.8rem;
+    background-color: rgba(0, 10, 0, 0.3);
+}
+
+.blog-meta i {
+    color: #00ff9d;
+}
+
+/* Terminal cursor effect on hover */
+.card:hover::after {
+    content: "_";
+    position: absolute;
+    bottom: 10px;
+    right: 15px;
+    color: #00ff9d;
+    animation: blink 1s step-end infinite;
+}
+
+@keyframes blink {
+    from, to { opacity: 1; }
+    50% { opacity: 0; }
+}
 
 
 
