updated nav ection names

--- a/index.html
+++ b/index.html
@@ -1566,8 +1566,8 @@
                 </div>
             </button>
             <div class="nav-links">
-                <a href="magazine.html">FEED</a>
-                <a href="journal.html">CODE</a>
+                <a href="magazine.html">ARCHIVE</a>
+                <a href="journal.html">JOURNAL</a>
                 <a href="work.html">LAB</a>
                 <a href="about.html">ABOUT</a>
             </div>
@@ -1698,13 +1698,13 @@
     <section class="sections-grid section">
         <!-- Magazine grid item with link -->
         <a href="magazine.html" class="grid-item magazine-grid glitch-hover">
-            <h3>FEED</h3>
+            <h3>ARCHIVE</h3>
             <p>Memory fragments, lost media and digital artifacts drifting through interviews, profiles, and subcultural signals from the uncharted edges of underground culture.</p>
         </a>
         
         <!-- Journal grid item with link -->
         <a href="journal.html" class="grid-item journal-grid glitch-hover">
-            <h3>CODE</h3>
+            <h3>JOURNAL</h3>
             <p>An intimate journal. Hacking consciousness, simulation theory and the hidden infrastructure of reality itself.</p>
         </a>
         
@@ -1719,9 +1719,9 @@
         <div class="vault-background"></div>
         <div class="vault-container">
             <div class="vault-header">
-                <div class="vault-icon">⚚</div>
+                <div class="vault-icon"></div>
                 <h2 class="vault-title">COMMUNITY VAULT</h2>
-                <p class="vault-subtitle">Join the underground network. Submit your signals, experiments, and forbidden knowledge to the collective archive.</p>
+                <p class="vault-subtitle">Join the network. Submit your signals, experiments, and forbidden knowledge to the collective archive.</p>
             </div>
             <a href="mailto:siphosenkosi.m@yahoo.com" class="submit-button">
                 <span>Submit a Signal</span>
