--- a/magazine.html
+++ b/magazine.html
@@ -21,7 +21,7 @@
             emailjs.init('6YdWPrE_MXY30SAKk');
         })();
     </script>
-    <title>siphosenkosi magazine</title>
+    <title>ARCHIVE</title>
     <!-- Add your existing styles -->
     <style>
 
@@ -1153,8 +1153,8 @@ const newStyles = `
                 
             </button>
             <div class="nav-links">
-                <a href="magazine.html">FEED</a>
-                <a href="journal.html">CODE</a>
+                <a href="magazine.html">ARCHIVE</a>
+                <a href="journal.html">JOURNAL</a>
                 <a href="work.html">LAB</a>
                 <a href="about.html">ABOUT</a>
             </div>
