--- a/work.html
+++ b/work.html
@@ -31,7 +31,7 @@
     </script>
 
 
-    <title>Work - Siphosenkosi Mlotshwa</title>
+    <title>THE LAB</title>
     <style>
         /* Reset and base styles */
         * {
@@ -1242,8 +1242,8 @@ const newStyles = `
                 </div>
             </button>
             <div class="nav-links">
-                <a href="magazine.html">FEED</a>
-                <a href="journal.html">CODE</a>
+                <a href="magazine.html">ARCHIVE</a>
+                <a href="journal.html">JOURNAL</a>
                 <a href="work.html">LAB</a>
                 <a href="about.html">ABOUT</a>
             </div>
