--- a/worldwideboyz-jp.html
+++ b/worldwideboyz-jp.html
@@ -493,8 +493,8 @@
                 </div>
             </button>
             <div class="nav-links">
-                <a href="magazine.html">FEED</a>
-                <a href="journal.html">CODE</a>
+                <a href="magazine.html">ARCHIVE</a>
+                <a href="journal.html">JOURNAL</a>
                 <a href="work.html">LAB</a>
                 <a href="about.html">ABOUT</a>
             </div>
