updated hero sections for archive, lab and journal,updated pirate radio card

--- a/neuroscience-of-psychedelics.html
+++ b/neuroscience-of-psychedelics.html
@@ -470,6 +470,7 @@
                 </div>
             </button>
             <div class="nav-links">
+                <a href="index.html">FEED</a>
                 <a href="magazine.html">ARCHIVE</a>
                 <a href="journal.html">JOURNAL</a>
                 <a href="work.html">LAB</a>
@@ -483,7 +484,7 @@
     <section class="section">
         <div class="article-container">
             <div class="article-image">
-                <img src="images/Abstract_Human_Figure-removebg-preview (2).png" alt="AI Brain" class="featured-image">
+                <img src="images/aigod1-removebg-preview.png" alt="AI Brain" class="featured-image">
             </div>
             <div class="article-header">
                 <h1>The Neuroscience of Psychedelics: How They Dissolve Reality and Rewire the Mind</h1>
