--- a/batsheva-dueck.html
+++ b/batsheva-dueck.html
@@ -515,6 +515,7 @@
                 </div>
             </button>
             <div class="nav-links">
+                <a href="index.html">FEED</a>
                 <a href="magazine.html">ARCHIVE</a>
                 <a href="journal.html">JOURNAL</a>
                 <a href="work.html">LAB</a>
