--- a/digital-after-life.html
+++ b/digital-after-life.html
@@ -451,6 +451,7 @@
                 </div>
             </button>
             <div class="nav-links">
+                <a href="index.html">FEED</a>
                 <a href="magazine.html">ARCHIVE</a>
                 <a href="journal.html">JOURNAL</a>
                 <a href="work.html">LAB</a>
