--- a/pirate-radio.html
+++ b/pirate-radio.html
@@ -470,6 +470,7 @@
                 </div>
             </button>
             <div class="nav-links">
+                <a href="index.html">FEED</a>
                 <a href="magazine.html">ARCHIVE</a>
                 <a href="journal.html">JOURNAL</a>
                 <a href="work.html">LAB</a>
