--- a/work.html
+++ b/work.html
@@ -1331,12 +1331,12 @@ const newStyles = `
     width: 100%;
     height: 100%;
     object-fit: cover;
-    opacity: 0.4; /* Increased from 0.3 */
-    filter: grayscale(50%) brightness(0.6); /* Reduced grayscale, increased brightness */
-    mix-blend-mode: screen; /* Creates better integration with background */
+    opacity: 0.7; /* Increased opacity */
+    filter: none; /* Removed grayscale and brightness filters */
+    mix-blend-mode: normal; /* Changed from screen */
 }
 
-/* Enhanced Glitch Overlay */
+/* Adjusted Glitch Overlay */
 .glitch-overlay {
     position: absolute;
     top: 0;
@@ -1345,13 +1345,12 @@ const newStyles = `
     height: 100%;
     z-index: 2;
     background: linear-gradient(
-        rgba(0,0,0,0.1), /* Lighter overlay */
-        rgba(0,0,0,0.2)
+        rgba(0,0,0,0.2),
+        rgba(0,0,0,0.3)
     );
-    opacity: 0;
-    /* Add noise texture */
+    /* Keep noise texture */
     background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.85' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
-    animation: glitchEffect 10s infinite; /* Apply the glitch animation */
+    animation: glitchEffect 10s infinite;
 }
 
 /* Add text contrast enhancement */
@@ -1428,6 +1427,7 @@ const newStyles = `
                 </div>
             </button>
             <div class="nav-links">
+                <a href="index.html">FEED</a>
                 <a href="magazine.html">ARCHIVE</a>
                 <a href="journal.html">JOURNAL</a>
                 <a href="work.html">LAB</a>
@@ -1447,7 +1447,7 @@ const newStyles = `
         <div class="glitch-overlay"></div>
         <h1 class="lab-title">THE LAB</h1>
         <!--<p class="lab-subtitle">Where Experiments Break, and Breakthroughs Begin.</p> -->
-        <p class="lab-subtitle">Not everything here was meant to survive. But everything here was meant to be tried. A secret hacker den. A playground for impossible ideas. A living experiment.</p>
+        <p class="lab-subtitle">Experimental software, rogue prototypes and algorithmic experiments. A secret hacker den. A playground for impossible ideas.</p>
     </header>
 
     <section class="section" id="work">
