made about me card sleek and minimalistic, also updated archive sections

--- a/index.html
+++ b/index.html
@@ -1445,7 +1445,7 @@
 .monitor-brand {
     font-family: 'IBM Plex Mono', monospace;
     font-size: 12px;
-    color: #444;
+    color: red;
     letter-spacing: 1px;
     text-transform: uppercase;
 }
@@ -2010,7 +2010,7 @@ body {
 
 .blinking-cursor {
     animation: blink 1s infinite;
-    color: #ff0000; /* Changed to red */
+    color: #00ff9d; /* Changed to red */
 }
 
 @keyframes blink {
