categorized journal entries

--- a/religious-tolerance.html
+++ b/religious-tolerance.html
@@ -451,10 +451,10 @@
                 </div>
             </button>
             <div class="nav-links">
+                <a href="index.html">FEED</a>
+                <a href="magazine.html">ARCHIVE</a>
                 <a href="journal.html">JOURNAL</a>
-                <a href="magazine.html">MAGAZINE</a>
-                <a href="work.html">PROJECTS</a>
-                <a href="shop.html">SHOP</a>
+                <a href="work.html">LAB</a>
                 <a href="about.html">ABOUT</a>
             </div>
         </div>
