updated frequency modulator card

--- a/index.html
+++ b/index.html
@@ -1995,7 +1995,7 @@ body {
 }
 
 .frequency {
-    color: red; /* Matrix green */
+    color: #00ff9d; /* Matrix green */
 }
 
 .decrypt-status {
@@ -2492,9 +2492,7 @@ body {
 <section class="current-feature section">
     <a href="pirate-radio.html" class="cyber-display-card">
         <div class="cyber-display-content">
-            <div class="scanlines"></div>
-            <div class="glow"></div>
-            <img src="images/Vibrant Soundwave Display.jpeg" alt="Ghost Signal" class="cyber-display-image">
+            
             <div class="cyber-text-container">
                 <div class="terminal-header">
                     <span class="led"></span>
