fixed typo on article intro

--- a/arianne-dirtbag666.html
+++ b/arianne-dirtbag666.html
@@ -672,7 +672,7 @@
             <div class="article-content">
                 <!-- Article content goes here -->
                 <p class="article-intro">
-                    Some designers create for catwalks. Arianne creates to breath.
+                    Some designers create for catwalks. Arianne creates to breathe.
 
 She doesn’t make fashion — she makes armor. Each seam is a signal. Each fabric is haunted. You won’t find polished silhouettes or trend cycles here — you’ll find old textiles, coffee stains, jagged hems, Billie Eilish wrapped in Audrey II, panic attacks turned into patterns.
 
