added new frequency card

--- a/journal.html
+++ b/journal.html
@@ -1024,7 +1024,7 @@ const newStyles = `
     left: 0;
     right: 0;
     height: 30px;
-    background: linear-gradient(to right, #003b00, #00ff9d;
+    background: linear-gradient(to right, #003b00, #00ff9d);
     opacity: 0.3;
 }
 
@@ -1072,7 +1072,6 @@ const newStyles = `
     from, to { opacity: 1; }
     50% { opacity: 0; }
 }
-
 
 
 
