updated headings and subheadings on all sections

--- a/work.html
+++ b/work.html
@@ -1405,6 +1405,44 @@ const newStyles = `
     97% { opacity: 0; transform: translate(0, 0); }
 }
 
+/* Section Headings */
+    .cyber-section-heading {
+        font-family: 'IBM Plex Mono', monospace;
+        font-size: 1.8rem;
+        color: #00ff9d;
+        text-transform: uppercase;
+        letter-spacing: 3px;
+        position: relative;
+        padding-bottom: 1rem;
+        margin: 3rem 0 2rem;
+        text-align: center;
+    }
+
+    .cyber-section-heading::after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 120px;
+        height: 3px;
+        background: linear-gradient(90deg, transparent, #00ff9d, transparent);
+        animation: headingGlow 2s infinite;
+    }
+
+    @keyframes headingGlow {
+        0%, 100% { opacity: 0.3; }
+        50% { opacity: 1; }
+    }
+
+    .cyber-subheading {
+        font-family: 'Share Tech Mono', monospace;
+        color: rgba(255,255,255,0.7);
+        font-size: 1.1rem;
+        text-align: center;
+        margin-top: 0.5rem;
+    }
+
 </style>
 
 
@@ -1453,8 +1491,10 @@ const newStyles = `
 
     <!-- Active Research Section -->
 <section class="section" id="research">
+    <h2 class="cyber-section-heading">ACTIVE RESEARCH ZONES</h2>
+    <p class="cyber-subheading"></p>
     <div class="container">
-      <h6 class="section-title">ACTIVE RESEARCH ZONES</h6>
+      <h6 class="section-title"></h6>
       
       <div class="grid grid-3">
         <!-- Ghost Shells Project -->
@@ -1508,8 +1548,10 @@ const newStyles = `
   </section>
 
     <section class="section" id="work">
+        <h2 class="cyber-section-heading">ABANDONED PROTOTYPES</h2>
+    <p class="cyber-subheading"></p>
         <div class="container">
-            <h6 class="section-title">ABANDONED PROTOTYPES</h6>
+            <h6 class="section-title"></h6>
             <!-- Tech Stack Section -->
             <div class="section-tech-stack">
                 <div class="tech-item">
