updated new article

--- a/a-nuclear-future.html
+++ b/a-nuclear-future.html
@@ -495,7 +495,7 @@
             position: relative;
         }
         .section-title::before {
-            content: '▶';
+            content: '';
             color: #00ff9d;
             margin-right: 0.5rem;
         }
