updated mobile menu button color

--- a/index.html
+++ b/index.html
@@ -29,6 +29,21 @@
   
     <!-- Add your existing styles -->
     <style>
+
+        .mobile-menu-btn {
+    border: 1px solid #00ff9d; /* Adds border around the hamburger button */
+    border-radius: 4px; /* Optional: rounds the corners */
+}
+
+.hamburger .line {
+    background: #00ff9d; /* Changes the hamburger lines color */
+    box-shadow: 0 0 2px #00ff9d; /* Adds subtle glow */
+}
+
+/* For the active state */
+.mobile-menu-btn.active {
+    border-color: #00ff9d55; /* Slightly transparent when menu is open */
+}
         .article-container {
             max-width: 800px;
             margin: 0 auto;
