--- a/index.html
+++ b/index.html
@@ -30,20 +30,7 @@
     <!-- Add your existing styles -->
     <style>
 
-        .mobile-menu-btn {
-    border: 1px solid #00ff9d; /* Adds border around the hamburger button */
-    border-radius: 4px; /* Optional: rounds the corners */
-}
-
-.hamburger .line {
-    background: #00ff9d; /* Changes the hamburger lines color */
-    box-shadow: 0 0 2px #00ff9d; /* Adds subtle glow */
-}
-
-/* For the active state */
-.mobile-menu-btn.active {
-    border-color: #00ff9d55; /* Slightly transparent when menu is open */
-}
+        
         .article-container {
             max-width: 800px;
             margin: 0 auto;
@@ -155,7 +142,7 @@
             width: 100%;
         }
 
-        .mobile-menu-btn {
+                .mobile-menu-btn {
             display: none;
             background: none;
             border: none;
@@ -163,6 +150,110 @@
             padding: 0.5rem;
             color: white;
         }
+
+        /* Mobile Styles */
+        @media (max-width: 768px) {
+            .nav-links {
+                position: fixed;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100vh;
+                background: black;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                transform: translateY(-100%);
+                transition: transform 0.3s ease-in-out;
+                z-index: 998;
+            }
+
+            .nav-links.active {
+                transform: translateY(0);
+            }
+
+            .nav-links a {
+                font-size: 2rem;
+                margin: 1rem 0;
+                color: white;
+                text-decoration: none;
+                transition: color 0.3s ease;
+            }
+
+            .nav-links a:hover {
+                color: #00ff9d;
+            }
+
+            .mobile-menu-btn {
+        display: block;
+        position: fixed;
+        top: 1rem;
+        right: 1rem;
+        z-index: 1000;
+        background: transparent;
+        border: none;
+        cursor: pointer;
+        padding: 0.5rem;
+        color: white;
+    }
+
+    .mobile-menu-btn.active {
+        border: 2px solid #00ff9d; /* Add this line */
+        border-radius: 5px;
+    }
+
+    .hamburger {
+    width: 30px;
+    height: 20px;
+    position: relative;
+    transition: all 0.3s ease-in-out;
+}
+
+.hamburger .line {
+    display: block;
+    background: white;
+    width: 100%;
+    height: 2px;
+    position: absolute;
+    left: 0;
+    transition: all 0.3s ease-in-out;
+}
+
+.hamburger .line:nth-child(1) {
+    top: 0;
+}
+
+.hamburger .line:nth-child(2) {
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.hamburger .line:nth-child(3) {
+    bottom: 0;
+}
+
+/* Animation classes */
+.mobile-menu-btn.active .hamburger .line:nth-child(1) {
+    transform: translateY(9px) rotate(45deg);
+}
+
+.mobile-menu-btn.active .hamburger .line:nth-child(2) {
+    opacity: 0;
+}
+
+.mobile-menu-btn.active .hamburger .line:nth-child(3) {
+    transform: translateY(-9px) rotate(-45deg);
+}
+
+            .logo {
+                position: fixed;
+                top: 1rem;
+                left: 1rem;
+                z-index: 1001;
+            }
+        }
+
 
         /* Footer */
         footer {
