--- a/journal.html
+++ b/journal.html
@@ -199,13 +199,18 @@
             width: 100%;
         }
 
-        .mobile-menu-btn {
-            display: none;
-            background: none;
-            border: none;
-            cursor: pointer;
-            padding: 0.5rem;
-        }
+        
+.mobile-menu-btn.active .hamburger .line:nth-child(1) {
+    transform: translateY(9px) rotate(45deg);
+}
+
+.mobile-menu-btn.active .hamburger .line:nth-child(2) {
+    opacity: 0;
+}
+
+.mobile-menu-btn.active .hamburger .line:nth-child(3) {
+    transform: translateY(-9px) rotate(-45deg);
+}
 
         
         /* Buttons */
