--- a/about.html
+++ b/about.html
@@ -1212,7 +1212,7 @@ const newStyles = `
             </div>
     
             <div class="bio-section">
-                <h3>Current Exploration</h3>
+                <h3>Current Exploration:</h3>
                 <div class="divider"></div>
                 <p>
                     • Glitch aesthetics as cultural resistance<br>
