--- a/index.html
+++ b/index.html
@@ -3509,7 +3509,7 @@ DECODING CORRUPTION: 68.4%
                 
                 <h2 class="vault-title">COMMUNITY VAULT</h2>
                 <div class="vault-icon"><i class="fas fa-lock-open"></i></div>
-                <p class="vault-subtitle">Join the network. Submit your signals, experiments, and forbidden knowledge to the collective archive.</p>
+                <p class="vault-subtitle">Join the network. Submit your signals, experiments, and forbidden knowledge to the collective archive</p>
             </div>
             <a href="mailto:siphosenkosi.m@yahoo.com" class="submit-button">
                 <span>Submit a Signal</span>
