first batch of article edits

--- a/about.html
+++ b/about.html
@@ -505,6 +505,8 @@ h1.name {
 ===================== */
 .navbar {
     position: fixed;
+    top: 0; /* Add this */
+    left: 0; /* Add this */
     width: 100%;
     z-index: 1000;
     background-color: black;
@@ -1239,7 +1241,7 @@ const newStyles = `
     </div>
 </button>   
             <div class="nav-links">
-                <a href="index.html">FEED</a>
+                
                 <a href="magazine.html">ARCHIVE</a>
                 <a href="journal.html">JOURNAL</a>
                 <a href="work.html">LAB</a>
