added article image

--- a/a-nuclear-future.html
+++ b/a-nuclear-future.html
@@ -625,7 +625,7 @@
     <section class="section">
         <div class="article-container">
             <div class="article-image">
-                <img src="images/White_Powder-removebg-preview.png" alt="AI Brain" class="featured-image">
+                <img src="images/r1handRBG.png" alt="AI Brain" class="featured-image">
             </div>
             <div class="article-header">
                 <h1>SYSTEM REBOOT: URANIUM_ACCESS = TRUE</h1>
