--- a/magazine.html
+++ b/magazine.html
@@ -1345,7 +1345,7 @@ const newStyles = `
 
 
                 <a href="a-nuclear-future.html" class="card">
-                    <img src="images/White_Powder-removebg-preview.png" alt="Space Exploration" class="blog-img">
+                    <img src="images/r2handRORG.jpg" alt="Space Exploration" class="blog-img">
                     <div class="card-content">
                         <h3>Archive Fragment 0005: URANIUM_ACCESS = TRUE</h3>
                         
