--- a/index.html
+++ b/index.html
@@ -1269,70 +1269,184 @@
   }
 }
 
+/* Improved CRT Monitor/Screen CSS */
 .transmission-image {
-    position: relative;
-    max-width: 1000px;
-    margin: 2rem auto;
-    border: 1px solid rgba(255,255,255,0.1);
-    overflow: hidden;
+  position: relative;
+  max-width: 1000px;
+  margin: 2rem auto;
+  overflow: hidden;
 }
 
+/* Monitor frame styling */
+.monitor-frame {
+  position: relative;
+  width: 100%;
+  border: 15px solid #111;
+  border-radius: 10px;
+  box-shadow: 0 0 25px rgba(0, 255, 157, 0.2);
+  overflow: hidden;
+  background: #000;
+  aspect-ratio: 4/3; /* Maintain classic CRT aspect ratio */
+}
+
+/* Monitor screen container */
+.monitor-screen {
+  position: relative;
+  background: #000;
+  width: 100%;
+  height: 100%;
+  overflow: hidden; /* Prevent image from overflowing */
+  display: flex; /* Use flexbox to center content */
+  align-items: center; /* Center vertically */
+  justify-content: center; /* Center horizontally */
+}
+
+/* Image styling to fit screen completely */
 .glitch-img {
-    width: 100%;
-    height: 580px;
-    object-fit: cover;
-    
-    position: relative;
-    z-index: 1;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Cover entire container */
+  object-position: center; /* Center the image */
+  display: block; /* Remove any inline spacing */
+  margin: 0; /* Remove any margin */
+  position: relative;
+  z-index: 1;
 }
 
+/* Scanline effect overlay */
+.monitor-scanline {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0.3) 50%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  background-size: 100% 4px;
+  animation: scanline 6s linear infinite;
+  pointer-events: none;
+  z-index: 2;
+}
+
+/* Glow effect for CRT look */
+.monitor-glow {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(
+    ellipse at center,
+    rgba(0, 255, 157, 0.03) 0%,
+    rgba(0, 0, 0, 0.3) 90%
+  );
+  pointer-events: none;
+  z-index: 3;
+}
+
+/* Image glitch effect */
 .image-glitch {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: 
-        linear-gradient(45deg, 
-            transparent 48%, 
-            rgba(255,0,255,0.05) 50%,
-            transparent 52%),
-        linear-gradient(-45deg, 
-            transparent 48%, 
-            rgba(0,255,157,0.05) 50%,
-            transparent 52%);
-    animation: image-glitch 4s infinite;
-    z-index: 2;
-    mix-blend-mode: overlay;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: 
+    linear-gradient(45deg, 
+      transparent 48%, 
+      rgba(255,0,255,0.05) 50%,
+      transparent 52%),
+    linear-gradient(-45deg, 
+      transparent 48%, 
+      rgba(0,255,157,0.05) 50%,
+      transparent 52%);
+  animation: image-glitch 4s infinite;
+  pointer-events: none;
+  z-index: 2;
+  mix-blend-mode: overlay;
+}
+
+/* Screen reflection effect */
+.monitor-reflection {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    135deg,
+    rgba(255, 255, 255, 0.05) 0%,
+    rgba(255, 255, 255, 0) 40%
+  );
+  pointer-events: none;
+  z-index: 4;
+}
+
+/* Monitor bezel (bottom part) */
+.monitor-bezel {
+  background: #1a1a1a;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-top: 2px solid #333;
+}
+
+.monitor-brand {
+  font-family: 'IBM Plex Mono', monospace;
+  font-size: 0.8rem;
+  color: rgba(255, 255, 255, 0.5);
+  letter-spacing: 1px;
+}
+
+.monitor-led {
+  width: 8px;
+  height: 8px;
+  background: rgba(0, 255, 157, 0.7);
+  border-radius: 50%;
+  box-shadow: 0 0 5px rgba(0, 255, 157, 0.5);
+  animation: blink 2s infinite alternate;
+}
+
+@keyframes scanline {
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: 0 100%;
+  }
 }
 
 @keyframes image-glitch {
-    0% { background-position: 0 0; }
-    20% { background-position: -5px 5px; }
-    40% { background-position: 5px -5px; }
-    60% { background-position: -5px -5px; }
-    80% { background-position: 5px 5px; }
-    100% { background-position: 0 0; }
+  0% { background-position: 0 0; }
+  20% { background-position: -5px 5px; }
+  40% { background-position: 5px -5px; }
+  60% { background-position: -5px -5px; }
+  80% { background-position: 5px 5px; }
+  100% { background-position: 0 0; }
 }
 
 /* Mobile adjustment */
 @media (max-width: 768px) {
-    .glitch-img {
-        height: 250px;
-    }
+  .monitor-frame {
+    border-width: 8px;
+  }
 }
 
 .cyber-button.loading .button-text:after {
-    content: '...';
-    animation: loadingDots 1s infinite;
+  content: '...';
+  animation: loadingDots 1s infinite;
 }
 
 @keyframes loadingDots {
-    0%, 20% { content: '.'; }
-    40% { content: '..'; }
-    60%, 100% { content: '...'; }
+  0%, 20% { content: '.'; }
+  40% { content: '..'; }
+  60%, 100% { content: '...'; }
 }
-
 .community-vault {
     background: black;
     padding: 4rem 2rem;
