edited nuclear futures article

--- a/a-nuclear-future.html
+++ b/a-nuclear-future.html
@@ -645,7 +645,7 @@
     <div class="article-core">
         <div class="article-content">
             <h2 class="section-title">THE LIE — COLONIZED ATOMICS</h2>
-            <p>They said <span class="highlight-africa">Africa</span> wasn't ready. That we couldn't be trusted with uranium, as if the soil hadn't whispered isotopes into our blood for millennia.</p>
+            <p>They said we couldn't be trusted with uranium, as if the soil hadn't whispered isotopes into our blood for millennia.</p>
             
             <p>They built the reactors — and placed them out of reach. We mined the ore — and shipped it to cathedrals of energy overseas. They left us in the dark, then sold us light at interest.</p>
             
