removed main heading from system intrusion

--- a/index.html
+++ b/index.html
@@ -3285,8 +3285,8 @@ a.faisaweb-card {
     
 
 <section class="section">
-        <h2 class="cyber-section-heading">SYSTEM INTRUSION DETECTED</h2>
-    <p class="cyber-subheading">MESSAGE CONTENTS: [REDACTED SCREAMS]</p>
+        <h2 class="cyber-section-heading"></h2>
+    <p class="cyber-subheading">SYSTEM INTRUSION DETECTED</p>
         <div class="teaser-container">
             <div class="terminal-card">
                 <div class="glitch-container">
