adjuted cyber text

--- a/index.html
+++ b/index.html
@@ -3401,7 +3401,7 @@ a.faisaweb-card {
 }
 
 .cyber-text {
-    font-size: 1.1rem;
+    font-size: 0.95rem;
     font-family: 'IBM Plex Mono', monospace;
     line-height: 1.7;
     margin-bottom: 1.5rem;
@@ -3695,7 +3695,7 @@ a.faisaweb-card {
                 <span class="frequency">FREQ: 4.8Hz</span>
             </div> 
             
-            <h3 class="signal-title">⚛ NUCLEAR IS LIBERATION</h3>
+            <h3 class="signal-title">NUCLEAR IS LIBERATION</h3>
             
             <p class="cyber-text">
                 600 million Africans offline while uranium fuels the future elsewhere. This isn't scarcity—it's systemic sabotage.
