updated home screen layout, updated cosmicweb and princy articles

--- a/worldwideboyz-jp.html
+++ b/worldwideboyz-jp.html
@@ -581,7 +581,7 @@
     <section class="section">
         <div class="article-container">
             <div class="article-image">
-                <img src="images/wwbz_graphic.png" alt="WORLD WIDE BOYZ CONNECTION" class="featured-image">
+                <img src="images/WWBz.jpg" alt="WORLD WIDE BOYZ CONNECTION" class="featured-image">
             </div>
             <div class="article-header">
                 <h1>@COSMICWEB_IS_MINE の思考の内側：日本からのトランスミッション</h1>
@@ -605,6 +605,8 @@
                     
                     ようこそ、コズミックウェブの世界へ。
                     </p>
+
+                    <img src="images/wwbz_graphic.png" alt="WORLD WIDE BOYZ CONNECTION" class="featured-image">
 
                     <h3>インタビュー:</h3>
                 
