--- a/worldwideboyz.html
+++ b/worldwideboyz.html
@@ -601,7 +601,7 @@
     <section class="section">
         <div class="article-container">
             <div class="article-image">
-                <img src="images/wwbz_graphic.png" alt="AI Brain" class="featured-image">
+                <img src="images/WWBz.jpg" alt="AI Brain" class="featured-image">
             </div>
             <div class="article-header">
                 <h1>Inside the Mind of @COSMICWEB_IS_MINE: A Japan Transmission</h1>
@@ -622,6 +622,10 @@
                 <p class="article-intro">
                     In a world dominated by clean aesthetics and algorithmically curated culture, @cosmicweb_is_mine is building a different kind of universe — one woven from the threads of street culture, glitchy digital chaos, music, and ancestral energy. Raised on technology, videogames, and the wisdom of a Yuta grandmother, his work exists at the strange intersection of sci-fi dystopias and inner human potential. In this intimate, unfiltered interview, @cosmicweb_is_mine invites us into his world — where conspiracies, symbolism, and rebellion fuse into one endlessly mutating creative signal. From the cosmic web to the streets of Japan, this is a story about breaking systems, blurring boundaries, and reclaiming authorship of the narrative. Welcome to the cosmic web.
                 </p>
+
+
+                <img src="images/wwbz_graphic.png" alt="AI Brain" class="featured-image">
+
 
                 <h3>THE INTERVIEW:</h3>
                 
