--- a/algorithmic-apartheid.html
+++ b/algorithmic-apartheid.html
@@ -550,7 +550,7 @@
     <section class="section">
         <div class="article-container">
             <div class="article-image">
-                <img src="images/" alt="AI Brain" class="featured-image">
+                <img src="images/Cracked_Ceramic_Cup-removebg-preview.png" alt="AI Brain" class="featured-image">
             </div>
             <div class="article-header">
                 <h1></h1>
