--- a/index.html
+++ b/index.html
@@ -3636,6 +3636,47 @@ a.faisaweb-card {
         </div>
     </section>
 
+
+
+<section class="intercepted-frequencies section">
+    <h2 class="cyber-section-heading">GHOSTS OF THE NAKBA</h2>
+    <p class="cyber-subheading">How Modern Apartheid Is Coded into Palestine’s Living Ruins</p>
+    <a href="algorithmic-apartheid.html" class="signal-container">
+        <div class="signal-card-header">
+            <div class="signal-status">
+                <span class="status-dot"></span>
+                <span>FREE PALESTINE</span>
+            </div>
+            <div class="signal-controls">
+                <div class="control-button red"></div>
+                <div class="control-button yellow"></div>
+                <div class="control-button green"></div>
+            </div>
+        </div>
+        
+        <div class="signal-image-container">
+            <div class="signal-overlay"></div>
+            <img src="images/Cracked_Ceramic_Cup-removebg-preview.png" alt="@cosmicweb_is_mine" class="signal-image">
+        </div>
+        
+
+
+
+        <div class="signal-content">
+            <span class="signal-tag">The Algorithm of Apartheid: Gaza, Genocide, and the Future of Control
+</span>
+            <h2 class="signal-title"></h2>
+            <h3 class="signal-subtitle"</h3>
+            <span class="decrypting"></span>
+            <p class="signal-text">Dissecting the machinery of digital apartheid, predictive killing, colonial erasure, and techno-fascism tested on Palestinians — and reveal why what happens in Gaza today is the blueprint for tomorrow’s wars on humanity everywhere.</p>
+            <p class="signal-quote">"This is not war. This is slaughter by remote control."</p>
+        </div>
+    </a>
+</section>
+
+
+
+
     <section class="intercepted-frequencies section">
     <h2 class="cyber-section-heading">GLITCH CANONIZATION</h2>
     <p class="cyber-subheading"></p>
