--- a/algorithmic-apartheid.html
+++ b/algorithmic-apartheid.html
@@ -557,7 +557,7 @@
             </div>
             <div class="article-content">
                 <!-- Article content goes here -->
-            <h>The Algorithm of Apartheid: Gaza, Genocide, and the Future of Control</h1>
+            <h1>The Algorithm of Apartheid: Gaza, Genocide, and the Future of Control</h1>
                 <div class="article-meta">
                     <span class="article-author">By Siphosenkosi Mlotshwa</span>
                     <span class="article-date">Published: June 29, 2025</span>
