--- a/algorithmic-apartheid.html
+++ b/algorithmic-apartheid.html
@@ -520,7 +520,7 @@ blockquote {
             border-left: 4px solid #c33;
             padding-left: 1.5rem;
             margin: 2rem 0;
-            color: #555;
+            color: black;
             font-style: italic;
         }
         section {
