--- a/algorithmic-apartheid.html
+++ b/algorithmic-apartheid.html
@@ -536,7 +536,7 @@ blockquote {
         hr {
             border: 0;
             height: 1px;
-            background: #ddd;
+            background: #00ff9d
             margin: 2.5rem 0;
         }
         .epigraph {
