--- a/index.html
+++ b/index.html
@@ -3678,13 +3678,13 @@ a.faisaweb-card {
 
 
     <section class="intercepted-frequencies section">
-    <h2 class="cyber-section-heading">GLITCH CANONIZATION</h2>
+    <h2 class="cyber-section-heading">CYBERPUNK REBELLION </h2>
     <p class="cyber-subheading"></p>
     <a href="worldwideboyz.html" class="signal-container">
         <div class="signal-card-header">
             <div class="signal-status">
                 <span class="status-dot"></span>
-                <span>SIGNAL LOCKED</span>
+                <span>REWRITE REALITY  </span>
             </div>
             <div class="signal-controls">
                 <div class="control-button red"></div>
@@ -3702,9 +3702,9 @@ a.faisaweb-card {
 
 
         <div class="signal-content">
-            <span class="signal-tag">INTERCEPTED FREQUENCY</span>
-            <h2 class="signal-title">@cosmicweb_is_mine</h2>
-            <h3 class="signal-subtitle">Japan's Glitch Prophet Rewrites Reality</h3>
+            <span class="signal-tag">cosmicweb_is_mine</span>
+            <h2 class="signal-title"></h2>
+            <h3 class="signal-subtitle"></h3>
             <span class="decrypting">DECRYPTING CULTURAL DNA...</span>
             <p class="signal-text">In a collision of Okinawan mysticism and cyberpunk rebellion, @cosmicweb_is_mine dissects the hidden codes binding street culture, ancestral spirits, and the digital void. This raw transmission unravels the Yuta grandmother who taught him to see gods in glitches, the philosophy that "breaking systems" begins with hacking your daily routine, and Japan's underground reimagined as a neural network of otaku energy. At its core pulses the <em>WORLD WIDE BOYZ</em> manifesto — a <em>Matrix</em>-esque declaration of autonomy in an algorithmic age.</p>
             <p class="signal-quote">"This universe belongs to you. Crash the algorithm."</p>
