--- a/index.html
+++ b/index.html
@@ -3668,7 +3668,7 @@ a.faisaweb-card {
             <h2 class="signal-title"></h2>
             <h3 class="signal-subtitle"</h3>
             <span class="decrypting"></span>
-            <p class="signal-text">Dissecting the machinery of digital apartheid, predictive killing, colonial erasure, and techno-fascism tested on Palestinians — and reveal why what happens in Gaza today is the blueprint for tomorrow’s wars on humanity everywhere.</p>
+            <p class="signal-text">Dissecting the machinery of digital apartheid, predictive killing, colonial erasure, and techno-fascism tested on Palestinians — and revealing why what happens in Gaza today is the blueprint for tomorrow’s wars on humanity everywhere.</p>
             <p class="signal-quote">"This is not war. This is slaughter by remote control."</p>
         </div>
     </a>
