--- a/index.html
+++ b/index.html
@@ -3735,7 +3735,7 @@ a.faisaweb-card {
         <div class="terminal-text">
           <p> 600 million Africans offline while uranium fuels the future elsewhere. This isn't scarcity—it's systemic sabotage.
 
-She speaks with the precision of a reactor core: calm, contained, critical. Where others see megawatts, she sees liberation vectors. Where the world sees risk, she sees Africa's latent energy potential humming at 400 million terajoules.
+Princy Mthombeni speaks with the precision of a reactor core: calm, contained, critical. Where others see megawatts, she sees liberation vectors. Where the world sees risk, she sees Africa's latent energy potential humming at 400 million terajoules.
 
 They call it nuclear physics—we call it emancipation engineering.
 
