--- a/journal.html
+++ b/journal.html
@@ -1271,6 +1271,9 @@ const newStyles = `
                         </div>
                     </div>
                 </a>
+ </div>
+        </div>
+    </section>
 
 
 
