--- a/princy_nuclear_goddess.html
+++ b/princy_nuclear_goddess.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+3<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -695,7 +695,7 @@
 
 /* Style for interviewee handle */
 .interview-handle {
-    color: #00bfff; 
+    color: white; 
     font-weight: 600;
     font-size: 0.95em;
     letter-spacing: 0.5px;
