--- a/index.html
+++ b/index.html
@@ -3774,7 +3774,7 @@ A voice that splits atoms and narratives with equal precision. A voice that repr
 
 <section class="intercepted-frequencies section">
     <h2 class="cyber-section-heading"></h2>
-    <p class="cyber-subheading"</p>
+    <p>class="cyber-subheading"</p>
     <a href="arianne-dirtbag666.html" class="signal-container">
         <div class="signal-card-header">
             <div class="signal-status">
@@ -3877,7 +3877,7 @@ A voice that splits atoms and narratives with equal precision. A voice that repr
         <div class="signal-card-header">
             <div class="signal-status">
                 <span class="status-dot"></span>
-                <span>DRIFTING BETWEEN CODE AND VANVAS</span>
+                <span>DRIFTING BETWEEN CODE AND CANVAS</span>
             </div>
             <div class="signal-controls">
                 <div class="control-button red"></div>
