--- a/index.html
+++ b/index.html
@@ -3774,7 +3774,7 @@ A voice that splits atoms and narratives with equal precision. A voice that repr
 
 <section class="intercepted-frequencies section">
     <h2 class="cyber-section-heading"></h2>
-    <p>class="cyber-subheading"</p>
+    <p class="cyber-subheading"></p>
     <a href="arianne-dirtbag666.html" class="signal-container">
         <div class="signal-card-header">
             <div class="signal-status">
