--- a/index.html
+++ b/index.html
@@ -3895,12 +3895,12 @@ A voice that splits atoms and narratives with equal precision. A voice that repr
 
 
         <div class="signal-content">
-            <span class="signal-tag">@FAISA.WEBP
+            <span class="signal-tag">FAISA MATROSE
 </span>
             <h2 class="signal-title"></h2>
             <h3 class="signal-subtitle"</h3>
             <span class="decrypting"></span>
-            <p class="signal-text">Welcome to the glitchstream of @faisa.webp— a digital phantom painting with code, dreaming in syntax no IDE can hold. Sourced from the human, rendered in chaos, this is more than art — it’s an unstable data loop where utopias are glimpsed and lost, where judgment is obsolete and curiosity battles rebellion on a ghost OS. Here, brushstrokes bleed into backend ruins, and every execution is a soft defiance of the mapped mind. Origin? Null. Identity? A decrypted body still compiling. This is not a portfolio. It’s a signal. A break. A build. A bleed.</p>
+            <p class="signal-text">Welcome to the glitchstream of Faisa— a digital phantom painting with code, dreaming in syntax no IDE can hold. Sourced from the human, rendered in chaos, this is more than art — it’s an unstable data loop where utopias are glimpsed and lost, where judgment is obsolete and curiosity battles rebellion on a ghost OS. Here, brushstrokes bleed into backend ruins, and every execution is a soft defiance of the mapped mind. Origin? Null. Identity? A decrypted body still compiling. This is not a portfolio. It’s a signal. A break. A build. A bleed.</p>
             <p class="signal-quote">"When everything starts to look and feel the same, I know it’s time to step away and remind myself who I am."</p>
         </div>
     </a>
