--- a/index.html
+++ b/index.html
@@ -3710,7 +3710,7 @@ a.faisaweb-card {
 
 
         <div class="signal-content">
-            <span class="signal-tag">Princy Mthomben
+            <span class="signal-tag">PRINCY  MTHOMBENI
 </span>
             <h2 class="signal-title"></h2>
             <h3 class="signal-subtitle"</h3>
