--- a/index.html
+++ b/index.html
@@ -3636,6 +3636,7 @@ a.faisaweb-card {
         </div>
     </section>
 
+<section>
 <p>Back when culture was raw and illegal,
                     kids built stations in basements and rooftops.
                     No likes, no sponsors — just static, bass, and revolution.
@@ -3643,6 +3644,7 @@ a.faisaweb-card {
                     They hacked the signal.
                     And if you know where to listen…
                     they still are. </p>
+</section>
 
 <section class="intercepted-frequencies section">
     <h2 class="cyber-section-heading"></h2>
