--- a/index.html
+++ b/index.html
@@ -3636,14 +3636,20 @@ a.faisaweb-card {
         </div>
     </section>
 
-<section>
-<p>Back when culture was raw and illegal,
+
+section class="intercepted-frequencies section">
+    <h2 class="cyber-section-heading"></h2>
+    <p class="cyber-subheading">Back when culture was raw and illegal,
                     kids built stations in basements and rooftops.
                     No likes, no sponsors — just static, bass, and revolution.
                     They jacked the airwaves.
                     They hacked the signal.
                     And if you know where to listen…
-                    they still are. </p>
+                    they still are. 
+</p>
+
+
+
 </section>
 
 <section class="intercepted-frequencies section">
