--- a/index.html
+++ b/index.html
@@ -3197,7 +3197,8 @@ a.faisaweb-card {
     }
 
     .cyber-subheading {
-        font-family: 'Share Tech Mono', monospace;
+   font-family: 'IBM Plex Mono', monospace;
+
         color: rgba(255,255,255,0.7);
         font-size: 1.1rem;
         text-align: center;
@@ -3637,7 +3638,7 @@ a.faisaweb-card {
     </section>
 
 
-section class="intercepted-frequencies section">
+<section class="intercepted-frequencies section">
     <h2 class="cyber-section-heading"></h2>
     <p class="cyber-subheading">Back when culture was raw and illegal,
                     kids built stations in basements and rooftops.
