--- a/journal.html
+++ b/journal.html
@@ -30,9 +30,9 @@
         .journal-heading {
             font-family: 'Barrio', cursive;
             text-align: center;
-            font-size: 3.5rem;
+            font-size: 2.5rem;
             margin-bottom: 3rem;
-            color: #00ff9d;
+            color: white;
             text-transform: uppercase;
             letter-spacing: 3px;
             position: relative;
